--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/white" />
+    <solid android:color="@color/background_color" />
     <corners android:radius="8dp" />
     <stroke
         android:width="1dp"
-        android:color="@android:color/darker_gray" />
+        android:color="@color/stroke_color" />
 </shape>
