--- a/app/src/main/res/layout/activity_list_video.xml
+++ b/app/src/main/res/layout/activity_list_video.xml
@@ -33,13 +33,18 @@
                 android:padding="8dp">
 
                 <!-- YouTube Logo -->
+
                 <ImageView
                     android:id="@+id/ivLogo"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:scaleType="centerInside"
-                    android:src="@drawable/ic_youtube_logo" />
+                    android:src="@drawable/ic_youtube_logo"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
 
                 <androidx.appcompat.widget.SearchView
                     android:id="@+id/svSearch"
