--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -5,7 +5,7 @@
         <item name="colorOnPrimary">@color/white</item>
         <item name="android:colorBackground">@color/dark_background</item>
         <item name="colorOnBackground">@color/white</item>
-        <item name="editTextBackground">@color/dark_edit_text_background</item>
+        <item name="editTextBackground">@color/dark_background</item>
     </style>
 
     <style name="Theme.YouTube" parent="Base.Theme.YouTube" />
