--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -3,5 +3,5 @@
     <corners android:radius="8dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/stroke_color" />
+        android:color="@color/red" />
 </shape>
