--- a/app/src/main/res/layout/activity_video_display.xml
+++ b/app/src/main/res/layout/activity_video_display.xml
@@ -103,7 +103,6 @@
         android:id="@+id/tvDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:layout_marginBottom="1dp"
         android:padding="8dp"
         android:text="@string/description_video"
@@ -127,10 +126,10 @@
         android:id="@+id/tv_author"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:padding="8dp"
         android:text="@string/author"
-        app:layout_constraintStart_toStartOf="@+id/tv_like"
-        app:layout_constraintTop_toBottomOf="@+id/tv_like" />
+        app:layout_constraintStart_toStartOf="@+id/tvTitle"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
     <TextView
         android:id="@+id/tv_view"
