--- a/app/src/main/res/layout/comment_list_item.xml
+++ b/app/src/main/res/layout/comment_list_item.xml
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ib_collapse">
 
         <TextView
-            android:id="@+id/textViewEdit"
+            android:id="@+id/tv_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_rounded"
@@ -71,7 +71,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textViewDelete"
+            android:id="@+id/tv_delete"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
