--- a/app/src/main/res/layout/video_list_item.xml
+++ b/app/src/main/res/layout/video_list_item.xml
@@ -80,8 +80,8 @@
         android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintTop_toBottomOf="@+id/tv_view"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_more" />
 
     <LinearLayout
@@ -96,7 +96,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ib_collapse">
 
         <TextView
-            android:id="@+id/textViewEdit"
+            android:id="@+id/tv_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_rounded"
@@ -109,7 +109,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textViewDelete"
+            android:id="@+id/tv_delete"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
