--- a/app/src/main/res/layout/activity_video_display.xml
+++ b/app/src/main/res/layout/activity_video_display.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/android:colorBackground"
-    tools:context=".videoDisplay.VideoDisplayActivity">
+    tools:context=".view.ui.VideoDisplayActivity">
 
     <!-- Video view for playing the video -->
     <VideoView
