--- a/app/src/main/res/layout/activity_add_video.xml
+++ b/app/src/main/res/layout/activity_add_video.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="16dp"
-    tools:context=".addVideo.AddVideoActivity">
+    tools:context=".view.ui.AddVideoActivity">
 
     <ImageView
         android:id="@+id/ivLogoImage"
