--- a/app/src/main/res/layout/activity_list_video.xml
+++ b/app/src/main/res/layout/activity_list_video.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".videoList.VideoListActivity">
+    tools:context=".view.ui.VideoListActivity">
 
     <!-- Main content -->
     <LinearLayout
