--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -14,6 +14,16 @@
                     android:id="@+id/profile_nickname"
                     android:icon="@drawable/ic_nickname"
                     android:title="Nickname" />
+
+                <item
+                    android:id="@+id/delete_user"
+                    android:icon="@drawable/ic_delete"
+                    android:title="Delete User" />
+
+                <item
+                    android:id="@+id/edit_user"
+                    android:icon="@drawable/ic_edit_user"
+                    android:title="Edit User" />
             </menu>
         </item>
     </group>
@@ -56,11 +66,7 @@
                 android:id="@+id/Help"
                 android:icon="@drawable/ic_help"
                 android:title="Help" />
-            <!-- Setting -->
-            <item
-                android:id="@+id/Setting"
-                android:icon="@drawable/ic_setting"
-                android:title="Setting" />
+
         </menu>
     </item>
 </menu>
