--- a/app/src/main/res/layout/activity_video_display.xml
+++ b/app/src/main/res/layout/activity_video_display.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:background="?attr/android:colorBackground"
     tools:context=".view.ui.VideoDisplayActivity">
+    <!-- Include the header layout -->
 
     <!-- Video view for playing the video -->
     <VideoView
@@ -109,8 +110,7 @@
         android:textColor="?attr/colorOnBackground"
         app:layout_constraintBottom_toTopOf="@+id/llButtons"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_author" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_like"
@@ -122,13 +122,23 @@
         app:layout_constraintEnd_toStartOf="@+id/tv_view"
         app:layout_constraintTop_toTopOf="@+id/tvTitle" />
 
+    <include
+        android:id="@+id/headerLayout"
+        layout="@layout/header"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/tvDescription"
+        app:layout_constraintStart_toStartOf="@+id/tvTitle"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+
     <TextView
         android:id="@+id/tv_author"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:text="@string/author"
-        app:layout_constraintStart_toStartOf="@+id/tvTitle"
+        app:layout_constraintBottom_toTopOf="@+id/tvDescription"
+        app:layout_constraintStart_toEndOf="@+id/headerLayout"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
     <TextView
