--- a/app/src/main/res/layout/activity_video_display.xml
+++ b/app/src/main/res/layout/activity_video_display.xml
@@ -92,8 +92,8 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:text="@string/title_video"
-        android:textStyle="bold"
         android:textColor="?attr/colorOnBackground"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_like"
         app:layout_constraintStart_toStartOf="parent"
@@ -122,14 +122,18 @@
         app:layout_constraintEnd_toStartOf="@+id/tv_view"
         app:layout_constraintTop_toTopOf="@+id/tvTitle" />
 
-    <include
-        android:id="@+id/headerLayout"
-        layout="@layout/header"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/siv_profile_pic"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:contentDescription="@string/profile"
+        android:scaleType="centerCrop"
+        android:src="@drawable/profile_pic"
         app:layout_constraintBottom_toTopOf="@+id/tvDescription"
         app:layout_constraintStart_toStartOf="@+id/tvTitle"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerFamily.Circular" />
+
 
     <TextView
         android:id="@+id/tv_author"
@@ -138,7 +142,7 @@
         android:padding="8dp"
         android:text="@string/author"
         app:layout_constraintBottom_toTopOf="@+id/tvDescription"
-        app:layout_constraintStart_toEndOf="@+id/headerLayout"
+        app:layout_constraintStart_toEndOf="@+id/siv_profile_pic"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
     <TextView
